--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines":{
-    "node":"20.18.0"
+  "engines": {
+    "node": "20.18.0"
   },
   "name": "wanderlust",
   "version": "1.0.0",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mistralai/mistralai": "^1.3.6",
     "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
